# project-3-mpi-p2p-team-6

./: CMakeLists.txt  README.md  ping_pong.cpp  ping_pong_non_blocking.cpp  ring_shift.cpp  run_pingpong_non_blocking.sh  submitjob_blocking.sb  submitjob_non_blocking.sb
include/: common.hpp
jobs/: submitjob_blocking.sb  submitjob_blocking_ringshift.sb  submitjob_non_blocking.sb  submitjob_non_blocking_ringshift.sb
results/: part1_pingpong.csv  part1_pingpong_multiple_nodes.csv  part2_pingpong_non_blocking.csv  part2_pingpong_non_blocking_multiple_nodes.csv  part3_ringshift.csv  part4_ringshift_non_blocking.csv
scripts/: part1_plotting.py  part2_plotting.py  plot_graphs.py  run_pingpong.sh  run_pingpong_non_blocking.sh  run_ringshift.sh  run_ringshift_non_blocking.sh
src/ping_pong/: ping_pong.cpp  ping_pong_non_blocking.cpp
src/ring_shift/: ring_shift.cpp  ring_shift_non_blocking.cpp
